--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   email_otp: ^3.0.2
   image_picker: ^1.1.2
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
