--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ firebase.json
 
 # Environment files
 .env
+Backend/.env
 
 # Generated keys and certificates
 server.cert
@@ -67,3 +68,6 @@ pubspec.lock
 
 # Ignore the model file
 modelSpecNew.onnx
+pix2pix_gen.onnx
+unetr.onnx
+vit.onnx
